# rust-axum-pg-docker-crud

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  diesel.toml
migrations/2025-02-02-220521_create_identities/: down.sql  up.sql
src/: database.rs  main.rs
src/api/: mod.rs  router.rs  state.rs
src/api/identities/: handlers.rs  routes.rs  schemas.rs
src/database/: models.rs  pool.rs  schema.rs
