[package]
name = "axum-pg-docker-crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
diesel = { version = "2.2.6", features = ["chrono", "postgres"] }
diesel-async = { version = "0.5.2", features = ["bb8", "postgres"] }
serde = { version = "1.0.217", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
